<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nyc.ac_44_comprehensive_android_practical_assessment.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:paddingTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:layout_gravity="center"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:maxWidth="200dp"
        android:layout_gravity="center"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_login"/>

</LinearLayout>
